# PlanFinance

./: README.md  build.sh  go.mod
backend/: Cargo.toml
backend/src/: errors.rs  main.rs  modals.rs
database/: TODO  createTable.go  database.go  entrepreunariat.db  main.go  utils.go
database/db/: context.go  createTable.go  database.go  entrepreunariat.db  utils.go
database/modals/: structure.go
database/server/: handler.go  serverParameters.go
frontend/: Cargo.toml  TODO  package-lock.json  package.json  tailwind.config.js
frontend/src/: TODO  home.rs  lib.rs  modals.rs  next.rs  pfinancement.rs  recapone.rs  stepone.rs  utils.rs
frontend/src/styles/: static.rs
frontend/static/: index.html  style.css  tailwind.css
