[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2"
web-sys = "0.3.69"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
reqwasm = "0.5.0"
log = "0.4.22"

[lib]
crate-type = ["cdylib", "rlib"]